[package]
name = "strey"
description = "Efficient strings, cheap to clone and compare."
version = "0.0.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/strey"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
